demoapp/ingress-demoapp-base.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-basepath
  namespace: f5demoapp
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: demo.my-f5.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: f5-demo-httpd
            port: 
              number: 8080
