demoapp/ingress-demoapp-master.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: f5demoapp
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: demo.my-f5.com
